@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5864 2004/05/08 01:55:57 minskim Exp $
+$NetBSD: CHANGES,v 1.5865 2004/05/08 02:12:32 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2407,3 +2407,8 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated jwhois to 3.2.2nb4 [kleink 2004-05-07]
 	Updated gdm to 2.6.0.2 [xtraeme 2004-05-08]
 	Added un-ttf-20030907 [minskim 2004-05-08]
+	Added gift-0.11.6 [xtraeme 2004-05-08]
+	Added gift-fasttrack-0.8.6 [xtraeme 2004-05-08]
+	Added gift-gnutella-0.0.9.2 [xtraeme 2004-05-08]
+	Added gift-openft-0.2.1.2 [xtraeme 2004-05-08]
+	Added giftcurs-0.6.2 [xtraeme 2004-05-08]
